--- a/skin/classic/fireinput.css
+++ b/skin/classic/fireinput.css
@@ -214,19 +214,20 @@ textbox.keyinputbox {
 }
 
 .composeeditorboxview {
-    -moz-appearance: none;
-    margin: 0px;
-    border: 1px;
-    padding: 5px 1px 5px 1px;
-    -moz-border-top-colors: none !important;
-    -moz-border-right-colors: none !important;
-    -moz-border-bottom-colors: none !important;
-    -moz-border-left-colors: none !important;
-    background: #E5E8EC;
-    font-family: icon; 
+    text-align: left;
+    margin: 3px 1px 0px 0px;
+    background: none;
     font-size: 12px;
+    color: blue; 
 }
 
+.composeeditorboxviewfirst {
+    text-align: left;
+    margin: 3px 1px 0px 3px;
+    background: none;
+    font-size: 12px;
+    color: blue; 
+}
 .composeeditorbox {
     -moz-appearance: none;
     margin: 0px; 
@@ -336,7 +337,7 @@ textbox.keyinputbox {
     margin: 0;
     border: none; 
     background: transparent !important; 
-    padding: 1px 0 1px 3px;
+    padding: 3px 0 1px 3px;
     font: icon;
     font-size: 15px;
     min-width: 100px;
