--- a/skin/classic/linux/fireinput.css
+++ b/skin/classic/linux/fireinput.css
@@ -1,3 +1,5 @@
+/* same as menuitem-non-iconic but make it's easy for all menuitems */
+@import "chrome://fireinput/skin/fireinput.css";
 
 .charinputlabel {
     text-align: left; 
@@ -23,9 +25,8 @@
     -moz-border-bottom-colors: #7F7357 !important;
     -moz-border-left-colors: #7F7357 !important;
     padding: 1px 0 1px 3px;
-    background: #CFD5DC; 
-    font: icon;
+    background-color: white; 
+    font-family: icon;
     font-size: 15px;
     min-width: 100px; 
 }
-
