--- a/skin/classic/win/fireinput.css
+++ b/skin/classic/win/fireinput.css
@@ -1,3 +1,5 @@
+/* same as menuitem-non-iconic but make it's easy for all menuitems */
+@import "chrome://fireinput/skin/fireinput.css";
 
 .charinputlabel {
     text-align: left; 
@@ -23,7 +25,7 @@
     -moz-border-bottom-colors: #7F7357 !important;
     -moz-border-left-colors: #7F7357 !important;
     padding: 1px 0 0px 3px;
-    background: #E7EBF2;
+    background-color: white; 
     font-family: Arial,Tahoma;
     font-size: 15px;
     min-width: 100px; 
