fix stream module; update css to sync up with id changes in overlay xul

--- a/skin/classic/fireinput.css
+++ b/skin/classic/fireinput.css
@@ -152,7 +152,7 @@ textbox.keyinputbox {
   background-color: white; 
 }
 
-#inputMethod, #fireinputMenu, #fireinputSpecialCharMenu,#fireinputEmotionMenu {
+#fireinputInputMethod, #fireinputMenu, #fireinputSpecialCharMenu,#fireinputEmotionMenu {
     -moz-binding: url("chrome://fireinput/content/bindings.xml#buttonmenu");
 }
 
