only support FF4 and beyond fix various html warnings

--- a/content/fireinput/browserOverlay.css
+++ b/content/fireinput/browserOverlay.css
@@ -6,7 +6,7 @@ statusbarpanel#fireinputStatusBar {
   cursor: pointer; 
 }
 
-#fireinput-toolbarbutton {
+#fireinput-toolbarbutton, #fireinput-tabtoolbarbutton{
   list-style-image: url("chrome://fireinput/skin/fireinput.png");
 }
 
@@ -15,4 +15,5 @@ toolbar[iconsize="small"] #fireinput-toolbarbutton > .toolbarbutton-icon {
   width: 18px;
   height: 18px;
 }
+
 
